--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta name="description" content="Webpage">
     
     <!-- This is where to hook up a CSS file -->
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="style.css">
     
   </head>
   
   <body> 
 
     <!-- This is where to pull in javascript-->
-    <script src="script.js"></script>
+    <script src="app.js"></script>
   </body>
 
 
