So sometimes when I can figure out how to do something, I get overly excited...

--- a/index.html
+++ b/index.html
@@ -2,18 +2,28 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Page Title</title>
+    <title>Group Randomizer</title>
     <meta name="description" content="Webpage">
-    
+    <script src="jquery.min.js"></script>
+    <script src="app.js"></script>
     <!-- This is where to hook up a CSS file -->
     <link rel="stylesheet" href="style.css">
     
   </head>
   
-  <body> 
-
-    <!-- This is where to pull in javascript-->
-    <script src="app.js"></script>
+  <body>
+    <div id="content">
+      <div class="btn">1</div>
+      <div class="btn">2</div>
+      <div class="btn">3</div>
+      <div class="btn">4</div>
+      <div class="btn">5</div>
+      <div class="btn">6</div>
+      <div class="btn">7</div>
+      <div class="btn">8</div>
+      <div class="btn">9</div>
+      <div class="btn">10</div>
+    </div>
   </body>
 
 
