--- a/index.html
+++ b/index.html
@@ -13,17 +13,22 @@
   
   <body>
     <div id="content">
-      <div class="btn">1</div>
-      <div class="btn">2</div>
-      <div class="btn">3</div>
-      <div class="btn">4</div>
-      <div class="btn">5</div>
-      <div class="btn">6</div>
-      <div class="btn">7</div>
-      <div class="btn">8</div>
-      <div class="btn">9</div>
-      <div class="btn">10</div>
-    </div>
+      <div class="sidebar">
+        <h1> Select number of teams:</h1>
+        <div class="btn">2</div>
+        <div class="btn">3</div>
+        <div class="btn">4</div>
+        <div class="btn">5</div>
+        <div class="btn">6</div>
+        <div class="btn">7</div>
+        <div class="btn">8</div>
+        <div class="btn">9</div>
+        <div class="btn">10</div>
+        <div id="generator">Go!</div>
+        <div id="typeSelect">Select by Team Size</div>
+      </div>
+      <div id="teams"></div>
+      </div>
   </body>
 
 
